Blender crashing after adding particle system and dynamic paint (Brush) #59059

Closed
opened 2018-12-09 08:41:00 +01:00 by Ajay Prasad · 7 comments

System Information
Operating system: Windows 10
Graphics card:

Blender Version
Broken: 2.80 Beta
Worked: 2.79

Adding Particle system in dynamic paint brush crashes blender

  1. Add a plane
  2. Create new particle system
  3. Add dynamic paint (brush)
  4. Under source select particle system
  5. On selecting particle system blender crashes
**System Information** Operating system: Windows 10 Graphics card: **Blender Version** Broken: 2.80 Beta Worked: 2.79 **Adding Particle system in dynamic paint brush crashes blender** 1. Add a plane 2. Create new particle system 3. Add dynamic paint (brush) 4. Under source select particle system 5. On selecting particle system blender crashes
Author

Added subscriber: @Ajay-Prasad-4

Added subscriber: @Ajay-Prasad-4

#59092 was marked as duplicate of this issue

#59092 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-12-09 10:14:54 +01:00

Well, following those exact steps, it also crashes for me with current master (and 2.8 too).

Well, following those exact steps, it also crashes for me with current master (and 2.8 too).

This issue was referenced by d7ef1af22b

This issue was referenced by d7ef1af22bf48f00607ba86e1344e1467e6e5e53

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @oenvoyage

Added subscriber: @oenvoyage
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59059
No description provided.