Fix T59059: Blender crashing after adding particle system and dynamic paint (Brush).

Looks like this bug has been there since ages (at least present before
2.79 official release...).